<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Contact"
    android:id="@+id/contact">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/AppTheme">

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="449dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="58dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >


            <TextView
                android:id="@+id/FAQ"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/faq"
                android:layout_gravity="center"
                android:textSize="25dp"
                android:fontFamily="@string/faq"
                android:layout_marginTop="30dp"
               >
            </TextView>

            <TextView
            android:id="@+id/INFO1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
                android:layout_marginTop="20dp"
            android:text="@string/How" >
        </TextView>

            <TextView
                android:id="@+id/INFO2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/go" >
            </TextView>

            <TextView
                android:id="@+id/INFO3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/what" >
            </TextView>

            <TextView
                android:id="@+id/INFo4"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/who" >
            </TextView>

            <TextView
                android:id="@+id/INFO5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/we" >
            </TextView>

            <TextView
                android:id="@+id/INFO6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:text="@string/cost" >
            </TextView>


        </LinearLayout>

    </ScrollView>

    <android.support.design.widget.BottomNavigationView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/bottom_nav_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="start"
        android:background="@color/colorPrimary"
        app:menu="@menu/bottom_nav"
        />
    </RelativeLayout>