<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/homepage"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimaryDark"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".Homepage"
    tools:showIn="@layout/app_bar_main">


    <Spinner
        android:id="@+id/spinner1"
        android:layout_width="242dp"
        android:layout_height="51dp"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="77dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="59dp"
        android:gravity="center"
        android:prompt="@string/animal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/getData"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="253dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="100dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="105dp"
        android:gravity="center"
        android:text="@string/get_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.518"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner1" />

    <Button
        android:id="@+id/addData"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="247dp"
        android:layout_height="44dp"
        android:layout_below="@+id/getData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="103dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="105dp"
        android:gravity="center"
        android:text="@string/add_device"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/getData" />



    <TextView
        android:id="@+id/textView3"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="45dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="18dp"
        android:text="@string/RData"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp" />

    <ScrollView
        android:layout_width="395dp"
        android:layout_height="406dp"
        android:layout_below="@+id/addData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="0dp">



    <TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/homepage_text"/>

    </ScrollView>


</RelativeLayout>
